added global progress bar on navigation

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,8 @@
-
+@if(isNavigating()) {
+  <div class="progress-bar-container">
+    <div class="progress-bar-fill"></div>
+  </div>
+}
 <app-header></app-header>
 
 <main class="px-12">
