--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -15,9 +15,10 @@
   </div>
 
   @if (vm$ | async; as vm) {
-    <div style="column-count: 5; column-gap: 1.5rem;" class="masonry-grid">
+    <div style="column-count: 3; column-gap: 1.5rem;" class="masonry-grid">
       @for (post of vm.posts; track post.title) {
-        <div class="card border-0 shadow-sm mb-4" style="break-inside: avoid;">
+        <app-post-card [post]="post"></app-post-card>
+        <!-- <div class="card border-0 shadow-sm mb-4" style="break-inside: avoid;">
           <div class="ratio ratio-16x9">
             <img src="{{post.imageUrl}}" class="img-fluid rounded-top" alt="">
           </div>
@@ -25,22 +26,24 @@
             <h6 class="fw-semibold">{{ post.title }}</h6>
             <p class="text-muted small mb-0">{{ post.description }}</p>
           </div>
-        </div>
+        </div> -->
       }
     </div>
+   
+    @if (vm.loading) {
+      <!-- <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div> -->
+      <app-loading-spinner *ngIf="vm.loading" size="sm" label="Loading..."></app-loading-spinner>
+    }
 
-     <div appInfiniteScroll (scrolled)="loadMore()" class="scroll-anchor">
-        @if (vm.loading) {
-          <div class="spinner-border text-primary" role="status">
-            <span class="visually-hidden">Loading...</span>
-          </div>
-        }@else if (vm.posts.length === 0) {
-          <p class="text-muted">No posts found.</p>
-        }
-    </div>
+    @if(vm.hasMore) {
+      <div appInfiniteScroll (scrolled)="loadMore(vm.loading)" class="scroll-anchor"></div>
+    }@else if (vm.posts.length > 0) {
+      <p class="text-muted">No more posts at this time.</p>
+    }
+  
    }
 
    
 </div>
-
-<!-- [(ngModel)]="searchQuery" -->
