--- a/src/app/features/posts/poststore.html
+++ b/src/app/features/posts/poststore.html
@@ -54,31 +54,19 @@
 
           <ul class="list-group list-group-flush" style="flex-grow:1;">
             @for (post of vm.posts; track post.title) {
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-
-              <div class="me-3">
-                <strong>{{ post.title }}</strong>
-                <p class="small text-muted mb-0">
-                  {{ post.description }}
-                </p>
-              </div>
-
-              <div class="d-flex gap-2">
-                <!-- Public / Private toggle -->
-                <button class="btn btn-sm" [ngClass]="post.isPublic ? 'btn-outline-secondary' : 'btn-outline-success'"
-                  (click)="onTogglePublic(post.title)">
-                  {{ post.isPublic ? 'Make Private' : 'Make Public' }}
-                </button>
-
-                <!-- Delete -->
-                <button class="btn btn-sm btn-outline-danger" (click)="onDelete(post.title)">
-                  Delete
-                </button>
-              </div>
-
-            </li>
+              <app-post-card [post]="post" mode="list-item">
+                <div actions class="d-flex gap-2">
+                  <button class="btn btn-sm" 
+                          [class]="post.isPublic ? 'btn-outline-secondary' : 'btn-outline-success'"
+                          (click)="onTogglePublic(post.title)">
+                    {{ post.isPublic ? 'Make Private' : 'Make Public' }}
+                  </button>
+                  <button class="btn btn-sm btn-outline-danger" (click)="onDelete(post.title)">
+                    Delete
+                  </button>
+                </div>
+              </app-post-card>
             }
-
           </ul>
 
           <div *ngIf="!vm.isLoading && vm.posts.length === 0" class="text-muted text-center mt-3">
@@ -90,3 +78,23 @@
 
   </div>
 </div>
+
+<!-- <li class="list-group-item d-flex justify-content-between align-items-start">
+  <div class="me-3">
+    <strong>{{ post.title }}</strong>
+    <p class="small text-muted mb-0">
+      {{ post.description }}
+    </p>
+  </div>
+
+  <div class="d-flex gap-2">
+    <button class="btn btn-sm" [ngClass]="post.isPublic ? 'btn-outline-secondary' : 'btn-outline-success'"
+      (click)="onTogglePublic(post.title)">
+      {{ post.isPublic ? 'Make Private' : 'Make Public' }}
+    </button>
+    <button class="btn btn-sm btn-outline-danger" (click)="onDelete(post.title)">
+      Delete
+    </button>
+  </div>
+
+</li> -->
