--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,15 @@
-@if(isNavigating()) {
+<div class="">
+  @if(isNavigating()) {
   <div class="progress-bar-container">
     <div class="progress-bar-fill"></div>
   </div>
-}
-<app-header></app-header>
+  }
 
-<main class="px-12">
-    <router-outlet />
-</main>
+  <div class="app-shell">
+     <app-header></app-header>
 
+      <main class="app-main px-12">
+        <router-outlet />
+      </main>
+  </div>
+</div>
