--- a/src/app/shared/ui/app-header/app-header.html
+++ b/src/app/shared/ui/app-header/app-header.html
@@ -1,18 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
   <div class="container">
 
-    <!-- Brand -->
     <a class="navbar-brand fw-semibold" routerLink="/home">
       App.com
     </a>
 
-    <!-- Mobile toggle -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
       aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Links -->
     <div class="collapse navbar-collapse" id="mainNavbar">
       <ul class="navbar-nav ms-auto gap-2">
 
@@ -41,6 +38,43 @@
         </li>
         }
 
+      </ul>
+    </div>
+  </div>
+</nav> -->
+
+<nav class="navbar navbar-expand-lg sticky-top custom-navbar">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center" routerLink="/home">
+      <div class="brand-icon me-2"></div>
+      <span class="brand-text">Postair</span>
+    </a>
+
+    <button class="navbar-toggler border-0 shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="mainNavbar">
+      <ul class="navbar-nav ms-auto align-items-lg-center">
+        <li class="nav-item">
+          <a class="nav-link px-3" routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+        </li>
+
+        @if (isLoggedIn()) {
+          <li class="nav-item">
+            <a class="nav-link px-3" routerLink="/posts" routerLinkActive="active">My Activity</a>
+          </li>
+          <li class="nav-item me-lg-3">
+            <a class="nav-link px-3" routerLink="/profile" routerLinkActive="active">Profile</a>
+          </li>
+          <li class="nav-item ms-lg-2 ps-lg-3 border-start-lg">
+             <app-user-overview [user]="user()" (logout)="onLogout()" />
+          </li>
+        } @else {
+          <li class="nav-item ms-lg-3">
+            <a class="btn btn-primary btn-sm px-4 shadow-sm" routerLink="/login">Login</a>
+          </li>
+        }
       </ul>
     </div>
   </div>
