--- a/src/app/shared/ui/app-header/app-header.html
+++ b/src/app/shared/ui/app-header/app-header.html
@@ -1,48 +1,3 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-  <div class="container">
-
-    <a class="navbar-brand fw-semibold" routerLink="/home">
-      App.com
-    </a>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
-      aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="mainNavbar">
-      <ul class="navbar-nav ms-auto gap-2">
-
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home" routerLinkActive="active fw-semibold"
-            [routerLinkActiveOptions]="{ exact: true }">
-            Home
-          </a>
-        </li>
-
-        @if (isLoggedIn()) {
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/posts" routerLinkActive="active fw-semibold">
-            My Activity
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/profile" routerLinkActive="active fw-semibold">Profile</a>
-        </li>
-        <app-user-overview [user]="user()" (logout)="onLogout()" />
-
-        } @else {
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login" routerLinkActive="active fw-semibold">Login</a>
-        </li>
-        }
-
-      </ul>
-    </div>
-  </div>
-</nav> -->
-
 <nav class="navbar navbar-expand-lg sticky-top custom-navbar">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" routerLink="/home">
@@ -62,7 +17,7 @@
 
         @if (isLoggedIn()) {
           <li class="nav-item">
-            <a class="nav-link px-3" routerLink="/posts" routerLinkActive="active">My Activity</a>
+            <a class="nav-link px-3" routerLink="/myactivity" routerLinkActive="active">My Activity</a>
           </li>
           <li class="nav-item me-lg-3">
             <a class="nav-link px-3" routerLink="/profile" routerLinkActive="active">Profile</a>
