--- a/src/app/shared/ui/app-header/app-header.html
+++ b/src/app/shared/ui/app-header/app-header.html
@@ -23,7 +23,7 @@
             <a class="nav-link px-3" routerLink="/profile" routerLinkActive="active">Profile</a>
           </li>
           <li class="nav-item ms-lg-2 ps-lg-3 border-start-lg">
-             <app-user-overview [user]="user()" (logout)="onLogout()" />
+              <div class="avatar-mini me-2">NK</div>
           </li>
         } @else {
           <li class="nav-item ms-lg-3">
