--- a/src/app/features/dashboard-layout/dashboard-layout.html
+++ b/src/app/features/dashboard-layout/dashboard-layout.html
@@ -1,4 +1,4 @@
-<div class="dashboard-container">
+<div class="dashboard-container home-container">
   <div class="col-lg-3">
     <app-sidebar class="dashboard-sidebar" [isPostMode]="isPostPage()">
         <div extra-content *ngIf="isPostPage()">
